# explorer_board_wifi_test

./: CMakeLists.txt  Makefile
src/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  app_conf.h  main.c
